--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-vue": "^9.19.2",
     "phaser": "^3.70.0",
     "socket.io-client": "^4.7.2",
+    "typescript": "^5.3.3",
     "vue": "^3.3.8"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-replace": "^4.0.0",
     "@vitejs/plugin-vue": "^4.5.0",
+    "prettier": "^3.1.0",
     "vite": "^5.0.0"
   }
 }
